feat: update navigation and headings to reflect conclusion and future findings

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button onclick="location.href='index.html'">Home</button>
             <button onclick="location.href='subpages/interactive.html'">Overview</button>
             <button onclick="location.href='subpages/static.html'">Deeper Analysis</button>
-            <button onclick="location.href='subpages/future.html'">Future Findings</button>
+            <button onclick="location.href='subpages/future.html'">Conclusion / Future Findings</button>
         </nav>
     </header>
     <main>
