--- a/subpages/future.html
+++ b/subpages/future.html
@@ -12,16 +12,30 @@
 
 <body>
     <header>
-        <h1 class='title'>Future Findings</h1>
+        <h1 class='title'>Conclusion / Future Findings</h1>
         <nav>
             <button onclick="location.href='../index.html'">Home</button>
             <button onclick="location.href='interactive.html'">Overview</button>
             <button onclick="location.href='static.html'">Deeper Analysis</button>
-            <button onclick="location.href='future.html'">Future Findings</button>
+            <button onclick="location.href='future.html'">Conclusion / Future Findings</button>
         </nav>
     </header>
     <main>
         <div style="display: flex; flex-direction: column; align-items: center;">
+            <div class="card">
+                <h3>
+                    Conclusion:
+                </h3>
+                <p>
+                    This analysis explores the complex factors that influence success in the NBA playoffs. It blends
+                    individual player metrics with team dynamics to highlight the key strategies that drive championship
+                    outcomes. Our team examines a range of variables, such as points scored, minutes played, assists,
+                    and shooting trends, to identify the patterns that highlight the critical role of star players and
+                    changing strategies, such as the rise of 3-point strategies. The interactive visualizations and data
+                    exploration provide actionable insights for audiences such as coaches, analysts, and fans to better
+                    understand the factors that drive team success and shape future strategies in the NBA.
+                </p>
+            </div>
             <div class="card">
                 <h4>Analyze Historical Trends in Championship Success</h4>
                 <ul>
