--- a/subpages/static.html
+++ b/subpages/static.html
@@ -17,7 +17,7 @@
             <button onclick="location.href='../index.html'">Home</button>
             <button onclick="location.href='interactive.html'">Overview</button>
             <button onclick="location.href='static.html'">Deeper Analysis</button>
-            <button onclick="location.href='future.html'">Future Findings</button>
+            <button onclick="location.href='future.html'">Conclusion / Future Findings</button>
         </nav>
     </header>
     <main>
